--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     <!-- Suggestion list -->
     <ul class="suggestion-list">
       <li class="suggestion">
-        <h4 class="text">Help me plan a game night with my 5 best friends for under $100.</h4>
+        <h4 class="text">Tell me something about Guru Tegh Bahadur Institute of Technology College</h4>
         <span class="icon material-symbols-rounded">draw</span>
       </li>
       <li class="suggestion">
-        <h4 class="text">What are the best tips to improve my public speaking skills?</h4>
+        <h4 class="text">Tell me a good Joke on B.tech Students</h4>
         <span class="icon material-symbols-rounded">lightbulb</span>
       </li>
       <li class="suggestion">
@@ -29,7 +29,7 @@
         <span class="icon material-symbols-rounded">explore</span>
       </li>
       <li class="suggestion">
-        <h4 class="text">Write JavaScript code to sum all elements in an array.</h4>
+        <h4 class="text">Write a c++ code to print factorial of a number given by user.</h4>
         <span class="icon material-symbols-rounded">code</span>
       </li>
     </ul>
