--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <!-- Linking Google Fonts For Icons -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,0,0" />
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" type="website favicon" href="/images/gemini logo.svg">
 </head>
 <body>
   <header class="header">
@@ -51,7 +52,7 @@
       </div>
     </form>
     <p class="disclaimer-text">
-      Gemini may display inaccurate info, including about people, so double-check its responses.
+      This version of Gemini is Free and Open source from Private API so repsonse may be limited from the original one.
     </p>
   </div>
 
